--- a/Frontend/emp-vi/src/app/registration-page/registration-page.component.css
+++ b/Frontend/emp-vi/src/app/registration-page/registration-page.component.css
@@ -1,4 +1,3 @@
-
 /* Basic styling for the whole body */
 body {
     font-family: 'Arial', sans-serif;
@@ -90,4 +89,9 @@ button:hover {
 .column {
     flex: 0 0 auto;
     /* width: 50%; */
+}
+.reg_btn{
+    float: inline-end;
+    width:50%;
+    margin-top:20px;
 }
