--- a/Frontend/emp-vi/src/app/flights-hotels/flights-hotels.component.html
+++ b/Frontend/emp-vi/src/app/flights-hotels/flights-hotels.component.html
@@ -5,6 +5,7 @@
     <h1 style="text-align: center; color: blue;">Book Flights + Hotels</h1>
     <div class="col">
     </div>
+    <!-- flight hotels page -->
     <div class="col" style="margin: left 10px; ;">
         <form class="example-form">
             <mat-form-field class="example-full-width" appearance="fill">
