--- a/Frontend/emp-vi/src/app/flights-hotels/flights-hotels.component.html
+++ b/Frontend/emp-vi/src/app/flights-hotels/flights-hotels.component.html
@@ -70,7 +70,7 @@
 <div class="mt-2  p-3 mb-5 bg-white rounded card" *ngIf="showFLights && areFlightsAvailable"
     style="margin-left:5% ; margin-right:5% ;">
 
-
+<!--  flightAirlines -->
 
     <div class="row">
         <div class="col">
