--- a/Frontend/emp-vi/src/app/employee-checkout-page/employee-checkout-page.component.html
+++ b/Frontend/emp-vi/src/app/employee-checkout-page/employee-checkout-page.component.html
@@ -2,7 +2,7 @@
     <app-nav class="top"></app-nav>
 </div>
 
-
+<!--- phone number-->
 <div fxLayout="row" fxLayoutAlign="center center">
     <mat-card class="user-profile-card">
         <mat-card-header>
