--- a/Frontend/emp-vi/src/app/assignment-history/assignment-history.component.html
+++ b/Frontend/emp-vi/src/app/assignment-history/assignment-history.component.html
@@ -7,6 +7,7 @@
         <button mat-button (click)="accordion.openAll()">Expand All</button>
         <button mat-button (click)="accordion.closeAll()">Collapse All</button>
     </div> -->
+  <!-- action buttons-->
     <div class="bg-white rounded card" *ngFor="let transaction of transactionResponseList; index as i;">
         <mat-accordion class="example-headers-align" multi>
             <mat-expansion-panel>
